WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27817
HDC leaks in PopupMenuWin.cpp
https://bugs.webkit.org/show_bug.cgi?id=27817
Summary
HDC leaks in PopupMenuWin.cpp
Yong Li
Reported
2009-07-29 14:59:57 PDT
patch will follow
Attachments
the patch
(1.62 KB, patch)
2009-07-29 15:03 PDT
,
Yong Li
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2009-07-29 15:03:51 PDT
Created
attachment 33745
[details]
the patch
Adam Roben (:aroben)
Comment 2
2009-07-29 15:55:07 PDT
Comment on
attachment 33745
[details]
the patch r=me
George Staikos
Comment 3
2009-07-29 16:48:49 PDT
r46564
George Staikos
Comment 4
2009-07-29 17:01:36 PDT
oops, closing this time.
r46564
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug