2009-07-29  Yong Li  <yong.li@torchmobile.com>

Reviewed by Adam Roben.

        FIX: HDC leaks in PopupMenuWin.cpp
        https://bugs.webkit.org/show_bug.cgi?id=27817


Canonical link: https://commits.webkit.org/38170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46564 268f45cc-cd09-0410-ab3c-d52691b4dbfc